# napari-calciumv3

./: .gitignore  LICENSE  README.md  calcium.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/napari_calciumv3/: __init__.py  _calcium.py  _tensorstore_zarr_reader.py  compile_data.py  napari.yaml
src/napari_calciumv3/_tests/: test_calcium.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
